--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,24 @@
 alembic==1.13.1
-annotated-doc==0.0.4
 annotated-types==0.7.0
-anyio==4.11.0
-bcrypt==4.3.0
-click==8.3.1
-fastapi==0.122.0
-h11==0.16.0
-idna==3.11
-Mako==1.3.10
-MarkupSafe==3.0.3
-numpy==2.2.6
-opencv-python==4.12.0.88
-passlib==1.7.4
-psycopg2-binary==2.9.11
-pydantic==2.12.5
-pydantic_core==2.41.5
-PyJWT==2.10.1
-python-dotenv==1.2.1
-python-multipart==0.0.20
-sniffio==1.3.1
-SQLAlchemy==2.0.44
-starlette==0.50.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-uvicorn==0.38.0
+anyio==4.4.0
+bcrypt==4.1.3
+click==8.1.7
+fastapi==0.115.2
+h11==0.14.0
+idna==3.7
+Mako==1.3.5
+MarkupSafe==2.1.5
+numpy==1.26.4
+opencv-contrib-python==4.10.0.84
+passlib[bcrypt]==1.7.4
+psycopg2-binary==2.9.9
+pydantic==2.8.2
+PyJWT==2.8.0
+python-dotenv==1.0.1
+python-multipart==0.0.9
+sniffio==1.3.0
+SQLAlchemy==2.0.30
+starlette==0.38.2
+typing_extensions==4.12.2
+uvicorn==0.30.6
+mediapipe==0.10.21
